--- a/.github/.ubiquity-os.config.mac.yml
+++ b/.github/.ubiquity-os.config.mac.yml
@@ -20,6 +20,19 @@ teamMembersOnly: &teamMembersOnly
   - OWNER
   - MEMBER
   - ADMIN
+timeLabels: &timeLabels
+  - name: "Time: <15 Minutes"
+    collaboratorOnly: false
+  - name: "Time: <1 Hour"
+    collaboratorOnly: false
+  - name: "Time: <2 Hours"
+    collaboratorOnly: false
+  - name: "Time: <4 Hours"
+    collaboratorOnly: false
+  - name: "Time: <1 Day"
+    collaboratorOnly: false
+  - name: "Time: <1 Week"
+    collaboratorOnly: false
 priorityLabels: &priorityLabels
   - name: "Priority: 0 (Regression)"
     collaboratorOnly: false
@@ -57,9 +70,8 @@ tcrHtmlConfig: &tcrHtmlConfig
     score: 0.1
     countWords: true
 plugins:
-  ubiquity-os-marketplace/command-config@codex/concurrent-20251222:
-    with:
-      autoMerge: true
+  ubiquity-os-marketplace/command-ask@development:
+  ubiquity-os-marketplace/command-config@feat/ubiquity-ai:
   https://command-query-development.deno.dev:
     with:
       allowPublicQuery: true
@@ -106,7 +118,7 @@ plugins:
   https://command-wallet-development.deno.dev:
     with:
       registerWalletWithVerification: false
-  ubiquity-os-marketplace/daemon-disqualifier@codex/concurrent-20251222:
+  ubiquity-os-marketplace/daemon-disqualifier@development:
     with:
       warning: 7 days
       eventWhitelist:
@@ -124,7 +136,7 @@ plugins:
       disqualification: 14 days
       prioritySpeed: true
       pullRequestRequired: true
-  ubiquity-os-marketplace/daemon-merging@codex/concurrent-20251222:
+  ubiquity-os-marketplace/daemon-merging@development:
     with:
       approvalsRequired:
         collaborator: 1
@@ -143,25 +155,24 @@ plugins:
         - COLLABORATOR
         - MEMBER
         - OWNER
-  0x4007-ubiquity-os/daemon-hotfix@codex/concurrent-20251222:
-    with:
-      enabled: true
-      modes:
-        - issue
-      allowWorkflowEvents: true
-      issueLabels:
-        - bug
-        - autofix
-  0x4007-ubiquity-os/daemon-pricing@codex/concurrent-20251222:
+  https://daemon-pricing-development.deno.dev:
     with:
       labels:
+        time: *timeLabels
         priority: *priorityLabels
       basePriceMultiplier: 3
       globalConfigUpdate:
         excludeRepos: []
       shouldFundContributorClosedIssue: false
-
-  ubiquity-os-marketplace/text-conversation-rewards@codex/concurrent-20251222:
+  # ubiquity-os-marketplace/daemon-pull-review@development:
+  #   with:
+  #     openRouterAiModel: google/gemini-2.5-flash
+  #     openRouterBaseUrl: https://openrouter.ai/api/v1
+  #     tokenLimit:
+  #       context: 200000
+  #       completion: 4096
+  ubiquity-os-marketplace/personal-agent-bridge@development:
+  ubiquity-os-marketplace/text-conversation-rewards@feat/ubiquity-ai:
     with:
       rewards:
         evmNetworkId: 100
@@ -207,13 +218,13 @@ plugins:
       dataCollection:
         maxAttempts: 10
         delayMs: 1000
-  ubiquity-os-marketplace/text-vector-embeddings@codex/concurrent-20251222:
+  ubiquity-os-marketplace/text-vector-embeddings@feat/ubiquity-ai:
     with:
       dedupeMatchThreshold: 0.95
       dedupeWarningThreshold: 0.75
       jobMatchingThreshold: 0.8
       alwaysRecommend: 0
-  ubiquity-os-marketplace/daemon-spec-rewriter@codex/concurrent-20251222:
+  ubiquity-os-marketplace/daemon-spec-rewriter@feat/ubiquity-ai:
 
   https://daemon-xp-development.deno.dev:
 
